testsuite/bsc.typechecker/context-errors/ContextReductionImplFunction.bsv.bsc-out.expected
checking package dependencies
compiling ContextReductionImplFunction.bsv
Error: "ContextReductionImplFunction.bsv", line 8, column 15: (T0020)
  Type error at:
    p[0]

  Expected type:
    Bool

  Inferred type:
    Bit#(1)

